# BrainwaveVST

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Source/: BrainwaveVST_core.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
